--- a/MEMDA_p1 (5).Rmd
+++ b/MEMDA_p1 (5).Rmd
@@ -3729,3 +3729,8 @@ pred_svm_TEST <- ifelse(TEST_BACKUP$prob_zero > umbral,
                   0,          
                   pred_svm_TEST)
 ```
+
+```{r}
+# jhabbd
+```
+
